# kwed

./: Cargo.toml  README.md  flake.nix
examples/: 1+1!=3.kwed  misc.kwed  missing_spans.kwed  tree-assoc.kwed
lib/: Lib.kwed
lib/Core/: Either.kwed  Eq.kwed  False.kwed  Logic.kwed  Map.kwed  Mod.kwed  Product.kwed  Prop.kwed  Unit.kwed
lib/Core/Logic/: Constructive.kwed  Mod.kwed
src/: ast.rs  ast_parser.lalrpop  err.rs  eval.rs  lex.rs  log.rs  main.rs  parse.rs
src/ast/: bind_vars.rs  desugared.rs  mod.rs  sugared.rs
src/eval/: shadow_map.rs
src/kernel/: context.rs  eval.rs  mod.rs  typeck.rs
tests/: misc.kwed
tests/negative/: circular_definition.kwed  contravariant-induction-paradox.kwed  non-positive-induction.kwed  recursion_limit.kwed  russell.kwed
tests/positive/: TestPrelude.kwed  computation.kwed  induction-zoo.kwed  let.kwed  named-arguments.kwed  parsing.kwed  span_reporting.kwed  stratification.kwed  struct-inclusion.kwed  structs.kwed  topological_sort.kwed  type-precedence.kwed
tests/positive/modules/: Core.kwed  Eq.kwed  Mod.kwed  Nat.kwed
