[package]
name = "kwed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
codespan-reporting = "0.11"
chumsky = "0.9"
indexmap = "2.2.6"
crossterm = "0.27.0"
base64 = "0.22.1"
argh = "0.1.12"
rand = "0.8.5"
