[package]
name = "kwed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
codespan-reporting = "0.11"
chumsky = "0.9"
indexmap = "2.2.6"
base64 = "0.22.1"
fastrand = "2.1.1"
yansi = "1.0.1"
lexopt = "0.3.0"
